--- a/search_bar.css
+++ b/search_bar.css
@@ -66,7 +66,7 @@
   
 }
 .logoTexte {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: bold;
     color: #007bff;
     text-decoration: none;
@@ -80,6 +80,11 @@
   .search #search-bar{
   width: 150px;
   
+  }
+  .logoTexte {
+    font-size: 1.2rem;
+    
+    
   }
 
  .search #sort-ads {
